TESTS: indentation and doublequote fixes

--- a/src/tests/assets/block.expansion.html
+++ b/src/tests/assets/block.expansion.html
@@ -1,15 +1,15 @@
 <ul>
-    <li>
-        <a href='#'>
-            foo
-        </a>
-    </li>
-    <li>
-        <a href='#'>
-            bar
-        </a>
-    </li>
+  <li>
+    <a href="#">
+      foo
+    </a>
+  </li>
+  <li>
+    <a href="#">
+      bar
+    </a>
+  </li>
 </ul>
 <p>
-    baz
+  baz
 </p>
