--- a/src/tests/assets/text.block.html
+++ b/src/tests/assets/text.block.html
@@ -1,8 +1,8 @@
 <label>
-    Username:
-    <input type='text' name='user[name]'/>
+  Username:
+  <input type="text" name="user[name]"/>
 </label>
 <label>
-    Password:
-    <input type='text' name='user[pass]'/>
+  Password:
+  <input type="text" name="user[pass]"/>
 </label>
