--- a/src/tests/assets/classes.html
+++ b/src/tests/assets/classes.html
@@ -1,6 +1,6 @@
-<a class='foo bar baz'>
+<a class="foo bar baz">
 </a>
-<a class='foo bar baz'>
+<a class="foo bar baz">
 </a>
-<a class='foo-bar_baz'>
+<a class="foo-bar_baz">
 </a>
