--- a/src/tests/assets/html5.html
+++ b/src/tests/assets/html5.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 
-<input type='checkbox' checked>
-<input type='checkbox' checked>
-<input type='checkbox'>
+<input type="checkbox" checked>
+<input type="checkbox" checked>
+<input type="checkbox">
