--- a/src/tests/assets/include.with.text.html
+++ b/src/tests/assets/include.with.text.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <script type='text/javascript'>
-             alert('hello world');
-        </script>
-    </head>
-    <script src='/caustic.js'>
+  <head>
+    <script type="text/javascript">
+       alert('hello world');
     </script>
-    <script src='/app.js'>
-    </script>
+  </head>
+  <script src="/caustic.js">
+  </script>
+  <script src="/app.js">
+  </script>
 </html>
