--- a/src/tests/assets/inheritance.alert.dialog.html
+++ b/src/tests/assets/inheritance.alert.dialog.html
@@ -1,6 +1,13 @@
-<div class="window"><a href="#" class="close">Close</a>
+<div class="window">
+  <a href="#" class="close">
+    Close
+  </a>
   <div class="dialog">
-    <h1>Alert!</h1>
-    <p>I'm an alert!</p>
+    <h1>
+      Alert!
+    </h1>
+    <p>
+      I'm an alert!
+    </p>
   </div>
 </div>
