--- a/src/tests/assets/inheritance.html
+++ b/src/tests/assets/inheritance.html
@@ -1,10 +1,19 @@
+<!DOCTYPE html>
+
 <html>
   <head>
-    <title>My Application</title>
-    <script src="jquery.js"></script>
+    <title>
+      My Application
+    </title>
+    <script src="jquery.js">
+    </script>
   </head>
   <body>
-    <h2>Page</h2>
-    <p>Some content</p>
+    <h2>
+      Page
+    </h2>
+    <p>
+      Some content
+    </p>
   </body>
 </html>
